--- a/wholeBrain/_data/quizzes.yml
+++ b/wholeBrain/_data/quizzes.yml
@@ -1,8 +1,16 @@
-ch1:
+# chapter‑1 has TWO checkpoints
+ch1_q1:
   - question: "Which part of the brain handles logic and planning?"
     choices:  ["Upstairs brain", "Downstairs brain", "Amygdala"]
     answer:   0
-ch2:
-  - question: "Name the two‑step strategy for integration."
-    choices:  ["Connect & Redirect", "Engage & Distract", "Label & Explain"]
-    answer:   0
+
+ch1_q2:
+  - question: "Which hemisphere processes emotions and non‑verbal cues?"
+    choices:  ["Left", "Right", "Both equally"]
+    answer:   1
+
+# chapter‑2, one checkpoint
+ch2_q1:
+  - question: "What are the two steps in the Connect & Redirect strategy?"
+    choices: ["Connect + Redirect", "Name + Tame", "Engage + Distract"]
+    answer: 0
