Rewrite chicken guide chapters and remove quiz.js
Major rewrite of all chickenGuide chapters with new beginner-friendly content, replacing placeholder text with detailed guides for each topic. Removed the React-based quiz.js script and updated quizzes.yml with a new quiz for chapter 0. Also removed automatic quiz rendering from chapter.html layouts and updated the site footer branding.

--- a/chickenGuide/_data/quizzes.yml
+++ b/chickenGuide/_data/quizzes.yml
@@ -1,4 +1,8 @@
-# chapter‑1 has TWO checkpoints
+ch0_q1:
+  - question: "Are you ready to learn about chickens?"
+    choices: ["Yes", "No"]
+    answer: 0
+
 ch1_q1:
   - question: "Which part of the brain handles logic and planning?"
     choices:  ["Upstairs brain", "Downstairs brain", "Amygdala"]
